--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@yudiel/react-qr-scanner": "^2.4.1",
+    "@zxing/library": "^0.21.3",
     "chart.js": "^4.5.1",
     "firebase": "^10.14.1",
     "lucide-react": "^0.544.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -18,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-zxing": "^2.1.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
