Fix: Remove invalid env references from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,8 @@
   "outputDirectory": "build",
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
-        },
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
@@ -21,6 +17,10 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
         }
       ]
     }
